# FMAToolboxPython

./: LICENSE  README.md
examples/: samples_and_intervals.ipynb  test_fmat.ipynb  test_regions.ipynb
fmatoolbox/: LICENSE  README.md  pyproject.toml
fmatoolbox/src/fmatoolbox/: __init__.py  analysis.py  data.py  exceptions.py  general.py  plotting.py  regions.py
regions/src/regions/: computation.py  data.py  loaders.py
