[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fmatoolbox"
version = "0.1.0"
description = "Python port of FMAToolbox"
authors = [{name = "Pietro Bozzo"}]
readme = "README.md"
license = "GPL-3.0-or-later"

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "statsmodels",
    "scikit-learn",
    "scikit-image",
]

[project.urls]
Homepage = "https://github.com/pietro-bozzo/FMAToolboxPython"
Repository = "https://github.com/pietro-bozzo/FMAToolboxPython"
Issues = "https://github.com/pietro-bozzo/FMAToolboxPython"

[tool.setuptools.packages.find]
where = ["src"]
